Refactor programming languages section in index.html, update project details in programming_languages_and_projects.js, add new Python weather project image, and enhance CSS styles for project images in latte_index.css and macchiato_index.css.

--- a/styles/latte_index.css
+++ b/styles/latte_index.css
@@ -286,6 +286,11 @@ header {
     color: var(--subtext1);
 }
 
+.project img {
+    max-width: 100%;
+    max-height: auto;
+}
+
 .github-icon {
     max-width: 5%;
     max-height: auto;
