--- a/styles/macchiato_index.css
+++ b/styles/macchiato_index.css
@@ -286,9 +286,14 @@ header {
     color: var(--subtext1);
 }
 
+.project_image {
+    max-width: 100%;
+    height: auto;
+}
+
 .github-icon {
     max-width: 5%;
-    max-height: auto;
+    height: auto;
 }
 
 /* Contact Section */
